[package]
name = "snap-coin-msg"
version = "0.1.0"
edition = "2024"
description = "SNAP Coin wallet-to-wallet opcode messaging app"

[dependencies]
snap-coin = { version = "15.2.0", features = ["full"] }
snap-coin-pay = { path = "../snap-coin-pay" }
snap-coin-opcode = { path = "../snap-coin-opcode" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
async-trait = "0.1"