# -----------------------------------------------------------------------------
# File: Cargo.toml
# Location: snap-coin-msg/Cargo.toml
# Version: 0.2.0
# Description: Manifest for snap-coin-msg — updated for snap-coin v16 compatibility.
#              Bumped snap-coin to 16.0.0, changed feature "full" to "full-node".
# -----------------------------------------------------------------------------

[package]
name = "snap-coin-msg"
version = "0.2.0"
edition = "2024"
description = "SNAP Coin wallet-to-wallet opcode messaging app"

[dependencies]
snap-coin = { version = "16.0.0", features = ["full-node"] }
snap-coin-pay = { path = "../snap-coin-pay" }
snap-coin-opcode = { path = "../snap-coin-opcode" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# File: Cargo.toml
# Location: snap-coin-msg/Cargo.toml
# Created: 2026-03-23T00:00:00Z
# -----------------------------------------------------------------------------